--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -4,8 +4,7 @@
 }
 
 .row {
-  display: flex;
-  flex-direction: row;
+	width: 1150px;
 }
 
 .red{
@@ -158,5 +157,8 @@ body {
 	}
 	.navbar .login-form .btn {
 		width: 100%;
+	}
+	.container{
+		flex-wrap: wrap;
 	}
 }
